@@ -1,5 +1,7 @@
 Please view this file on the master branch, on stable branches it's out of date.
+
 v 8.12.0 (unreleased)
+  - Change merge_error column from string to text type
   - Optimistic locking for Issues and Merge Requests (title and description overriding prevention)
 
 v 8.11.0 (unreleased)
